fix white space

--- a/client/layout/layout.less
+++ b/client/layout/layout.less
@@ -23,4 +23,5 @@
   right:0;
   bottom:0;
   background-color: #F8F8F8;
+  overflow-y:auto;
 }
