--- a/client/utilities/typography.less
+++ b/client/utilities/typography.less
@@ -11,4 +11,5 @@
 
 .typ-prose() {
   font-family: 'Source Sans Pro', sans-serif;
+  white-space:pre-wrap;
 }
